--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,4 @@
 @import url(./contacts_responsive.css);
 @import url(./overlay_board_template.css);
 @import url(./add_task.css);
+@import url(./header.css);
