--- a/style/navbar.css
+++ b/style/navbar.css
@@ -81,18 +81,56 @@
     cursor: default;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1400px) {
     .navbar {
-        min-width: 200px;
+        height: 80px;
+        width: 100%;
+        padding: 0 16px;
+        position: fixed;
+        bottom: 0;
+    }
+
+    .navbar-content-limiter {
+        flex-direction: row;
+    }
+
+    .navbar > svg{
+        display: none;
+    }
+
+    .navbar-logo {
+        display: none;
+    }
+
+    .nav-list {
+        flex-direction: row;
+        height: 100%;
+    }
+
+    .navbar-link-content {
+        justify-content: center;
+    }
+
+    .nav-list li {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
     }
 
     .navbar-link {
-        padding: 8px 44px;
+        height: 100%;
+        border-radius: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .navbar-footer a {
-        margin-left: 42px;
+    .navbar-footer {
+        display: none;
     }
+
 }
 
 @media (max-width: 1100px) {
@@ -120,9 +158,7 @@
         display: none;
     }
 
-    .navbar > svg{
-        display: none;
-    }
+    
 
     .nav-list li {
         flex-direction: column;
@@ -141,6 +177,50 @@
         padding: 0;
         border-radius: 16px;
         font-size: 14px;
+    }
+
+    .navbar-active {
+        border-radius: 16px;
+    }
+
+}
+
+@media (max-width: 960px) {
+
+    .nav-list {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        gap: 15px;
+        width: 100%;
+    }
+
+    .navbar-footer {
+        display: none;
+    }
+
+    .navbar-logo {
+        display: none;
+    }
+
+    .navbar-link-content {
+        /* width: 76px;
+        height: 76px; */
+        padding: 0;
+        border-radius: 16px;
+    }
+
+    .nav-list li {
+        flex-direction: column;
+        /* width: 76px;
+        height: 76px; */
+
+    }
+
+    .navbar-link {
+        height: auto;
     }
 
     .navbar-active {
